--- a/cse190_listApp/res/layout/write_review.xml
+++ b/cse190_listApp/res/layout/write_review.xml
@@ -1,85 +1,116 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp">
-
-    <ImageView
+>
+<RelativeLayout 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+ >
+    	<ImageView
         android:id="@+id/dish_picture"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_weight="0.5"
-        android:src="@drawable/ic_launcher" />
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:adjustViewBounds="true" 
+       	android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:contentDescription="picture"
+        />
+</RelativeLayout>
+	<LinearLayout
+	android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" 
+    android:layout_margin="10dp"
+	>
 
-        <RelativeLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0" 
-            android:layout_marginTop="10dp">
-            
-            <TextView
-	            android:id="@+id/dish_name"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_marginBottom="10dp"
-	            android:text="Dish Name" 
-	            android:textSize="25dp"/>
-
-            <ImageView
-                android:id="@+id/user_profile_pic"
+            android:layout_marginTop="4dp"
+            android:orientation="vertical" 
+            >
+           <TextView
+                android:id="@+id/dish_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_launcher" 
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/dish_name"/>
+                android:layout_marginBottom="1dp"
+                android:text="Dish Name"
+                android:textSize="20sp"
+               	android:textStyle="bold"
+                 />
 
-                <TextView
-                    android:id="@+id/select_rating_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Select Rating:"
-                    android:textSize="20dp" 
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@id/dish_name"/>
+            <TextView
+                android:id="@+id/resnamewrite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Restaurant Name"
+                android:textSize="16sp"
+                android:textColor="#868686"
+                 />
+ 
+      <LinearLayout
+	     android:layout_width="match_parent"
+	     android:layout_height="wrap_content"
+	     android:layout_weight="0" 
+	     android:layout_marginTop="10dp"
+	     android:orientation="horizontal" 
+       >
 
-                <RatingBar
+          <TextView
+              android:id="@+id/select_rating_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Rating"
+              android:textSize="24sp" />
+
+            <RatingBar
                     android:id="@+id/user_rating"
+                    style="?android:attr/ratingBarStyleIndicator"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="?android:attr/ratingBarStyleIndicator"
                     android:isIndicator="false"
                     android:numStars="5"
-                    android:stepSize="0.5"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@id/select_rating_text" />"
-
-
-        </RelativeLayout>
+                    android:stepSize="0.5" 
+                    android:layout_marginLeft="20dp"
+                    />
+            </LinearLayout>
+ 
+		</LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.4" >
-
+ 
 	   <EditText
 	       android:id="@+id/reviewtextbox"
 	       android:layout_width="match_parent"
 	       android:layout_height="wrap_content"
-	       android:ems="10"
-	       android:inputType="textMultiLine"
-	       android:minLines="4" />
+	       android:layout_weight="0.97"
+	       android:minLines="4" 
+	       android:background="@drawable/rectangleborder"
+	       android:padding="10dp"
+	       android:gravity="top"
+	       android:layout_marginTop="20dp"
+	       />
 
 	   <Button
 	       android:id="@+id/post_review_button"
 	       android:layout_width="wrap_content"
 	       android:layout_height="wrap_content"
 	       android:layout_alignParentRight="true"
-	       android:layout_below="@+id/reviewtextbox"
 	       android:onClick="postClick"
-	       android:text="Post" />
+	       android:text="Post" 
+	       android:layout_below="@+id/reviewtextbox"
+	       android:layout_marginTop="10dp"
+	       android:background="@drawable/red_box"
+	       android:textColor="#FFFFFF"
+	    />
    
-   </RelativeLayout>
-
+       </RelativeLayout>
+	</LinearLayout>
 </LinearLayout>
