--- a/cse190_listApp/res/layout/editprofile.xml
+++ b/cse190_listApp/res/layout/editprofile.xml
@@ -2,87 +2,96 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/explode_bkg"
+    >
 
-
-    <TextView
-        android:id="@+id/username_label"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Username"
-        android:textSize="15dp" 
-        android:layout_marginTop="30dp"
-        />
-
-    <EditText
-        android:id="@+id/editProUserName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" >
-    </EditText>
-
-    <TextView
-        android:id="@+id/editProfilePassword_label"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Password"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/editProPassword1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:id="@+id/editProRetypePass_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Re-Type Password"
-        android:textSize="14dp" />
-
-    <EditText
-        android:id="@+id/editProPassword2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword" >
-    </EditText>
-
-    <TextView
-        android:id="@+id/editProEmail_label"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Email"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/editProEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
-
-     <RelativeLayout
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content" >
-
-         <Button
-             android:id="@+id/Update_btn"
-             android:layout_width="100dp"
-             android:layout_height="wrap_content"
-             android:layout_centerHorizontal="true"
-             android:text="Update" 
-             android:onClick="updateClick"/>
-     </RelativeLayout>
-
+	<LinearLayout
+	android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginTop="30dp"
+    android:orientation="vertical"    
+    >
+	    <TextView
+	        android:id="@+id/username_label"
+	        android:layout_width="100dp"
+	        android:layout_height="30dp"
+	        android:layout_margin="5dp"
+	        android:ems="10"
+	        android:text="Username"
+	        android:textSize="15dp" 
+	        android:layout_marginTop="30dp"
+	        />
+	
+	    <EditText
+	        android:id="@+id/editProUserName"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:ems="10" >
+	    </EditText>
+	
+	    <TextView
+	        android:id="@+id/editProfilePassword_label"
+	        android:layout_width="100dp"
+	        android:layout_height="30dp"
+	        android:layout_margin="5dp"
+	        android:ems="10"
+	        android:text="Password"
+	        android:textSize="14sp" />
+	
+	    <EditText
+	        android:id="@+id/editProPassword1"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:ems="10"
+	        android:inputType="textPassword" />
+	
+	    <TextView
+	        android:id="@+id/editProRetypePass_label"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_margin="5dp"
+	        android:ems="10"
+	        android:text="Re-Type Password"
+	        android:textSize="14dp" />
+	
+	    <EditText
+	        android:id="@+id/editProPassword2"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:ems="10"
+	        android:inputType="textPassword" >
+	    </EditText>
+	
+	    <TextView
+	        android:id="@+id/editProEmail_label"
+	        android:layout_width="100dp"
+	        android:layout_height="30dp"
+	        android:layout_margin="5dp"
+	        android:ems="10"
+	        android:text="Email"
+	        android:textSize="14sp" />
+	
+	    <EditText
+	        android:id="@+id/editProEmail"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:ems="10"
+	        android:inputType="textEmailAddress" />
+	
+	     <RelativeLayout
+	         android:layout_width="fill_parent"
+	         android:layout_height="wrap_content" >
+	
+	         <Button
+	             android:id="@+id/Update_btn"
+	             android:layout_width="100dp"
+	             android:layout_height="wrap_content"
+	             android:layout_centerHorizontal="true"
+	             android:text="Update" 
+	             android:onClick="updateClick"/>
+	     </RelativeLayout>
+	</LinearLayout>
 </LinearLayout>
