--- a/cse190_listApp/res/layout/first_launch.xml
+++ b/cse190_listApp/res/layout/first_launch.xml
@@ -3,95 +3,95 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
+    android:background="@drawable/explode_bkg"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" 
-        android:layout_marginLeft="15dp"
-    	android:layout_marginRight="15dp">
-
-        <ImageView
-            android:id="@+id/dishpicture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher" />
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView1"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome"
+            android:textColor="#ab2224"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
+            android:text="Login or Sign up to have the ability to write reviews."
+            android:textColor="#ab2224"
+            android:textSize="12sp" />
+
+        <EditText
+            android:id="@+id/username_edit"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_weight="1"
-            android:textSize="30sp"
-            android:text="Find My Craving" />
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rectangleborder"
+            android:ems="10"
+            android:hint="User Email"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:singleLine="true" />
+
+        <EditText
+            android:id="@+id/password_edit"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rectangleborder"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:singleLine="true" />
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/red_box"
+            android:onClick="logInClick"
+            android:text="Login"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/sign_up_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/red_box"
+            android:drawableLeft="@drawable/login_people"
+            android:onClick="signUpClick"
+            android:paddingLeft="20dp"
+            android:text="Touch to Signup"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/sign_up_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_weight="0.13"
+            android:background="@drawable/red_box"
+            android:drawableLeft="@drawable/login_browse"
+            android:onClick="browseClick"
+            android:paddingLeft="20dp"
+            android:text="Start Browising"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
     </LinearLayout>
-    
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:layout_marginLeft="50dp"
-	    android:layout_marginRight="50dp">
-        
-	    <TextView
-	        android:id="@+id/username_view"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	    	android:layout_marginTop="30dp"
-	        android:text="User Email:" />
-	
-	    <EditText
-	        android:id="@+id/username_edit"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:singleLine="true" 
-	        android:layout_below="@id/username_view"
-	        android:ems="10" />
-	        
-	    <TextView
-	        android:id="@+id/password_view"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	    	android:layout_marginTop="20dp"
-	    	android:layout_below="@id/username_edit"
-	        android:text="Password:" />
-	
-	    <EditText
-	        android:id="@+id/password_edit"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	    	android:inputType="textPassword"
-	    	android:layout_below="@id/password_view"
-	        android:ems="10" />
-	
-	    <Button
-	        android:id="@+id/login_button"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	    	android:layout_marginTop="10dp"
-	    	android:layout_below="@id/password_edit"
-	    	android:onClick="logInClick"
-	        android:text="Login" />
-	
-	    <Button
-	        android:id="@+id/sign_up_button"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	    	android:layout_marginTop="40dp"
-	    	android:layout_below="@id/login_button"
-	    	android:onClick="signUpClick"
-	        android:text="Sign Up" />
-	
-	    <Button
-	        android:id="@+id/browse_button"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	    	android:layout_marginTop="20dp"
-	    	android:layout_below="@id/sign_up_button"
-	    	android:onClick="browseClick"
-	        android:text="Browse" />
-	
-	    
-    </RelativeLayout>
 
 </LinearLayout>
