--- a/cse190_listApp/res/layout/editprofile.xml
+++ b/cse190_listApp/res/layout/editprofile.xml
@@ -15,83 +15,81 @@
     android:orientation="vertical"    
     >
 	    <TextView
-	        android:id="@+id/username_label"
-	        android:layout_width="100dp"
-	        android:layout_height="30dp"
-	        android:layout_margin="5dp"
-	        android:ems="10"
-	        android:text="Username"
-	        android:textSize="15dp" 
-	        android:layout_marginTop="30dp"
-	        />
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginBottom="30dp"
+	        android:text="Edit Profile"
+	        android:textStyle="bold"
+	        android:textColor="#ab2224"
+	        android:textSize="24sp" />
 	
 	    <EditText
 	        android:id="@+id/editProUserName"
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:ems="10" >
-	    </EditText>
-	
-	    <TextView
-	        android:id="@+id/editProfilePassword_label"
-	        android:layout_width="100dp"
-	        android:layout_height="30dp"
-	        android:layout_margin="5dp"
-	        android:ems="10"
-	        android:text="Password"
-	        android:textSize="14sp" />
-	
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:lines="1"
+	        android:singleLine="true" 
+	        android:ems="10" 
+	        android:hint="User Name"
+	        android:background="@drawable/rectangleborder"
+	        />
+	      
 	    <EditText
 	        android:id="@+id/editProPassword1"
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
 	        android:ems="10"
-	        android:inputType="textPassword" />
-	
-	    <TextView
-	        android:id="@+id/editProRetypePass_label"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_margin="5dp"
-	        android:ems="10"
-	        android:text="Re-Type Password"
-	        android:textSize="14dp" />
+	        android:hint="Password"
+	        android:inputType="textPassword" 
+	        android:background="@drawable/rectangleborder"
+	        />
 	
 	    <EditText
 	        android:id="@+id/editProPassword2"
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:hint="Re-type Password"
 	        android:ems="10"
-	        android:inputType="textPassword" >
-	    </EditText>
-	
-	    <TextView
-	        android:id="@+id/editProEmail_label"
-	        android:layout_width="100dp"
-	        android:layout_height="30dp"
-	        android:layout_margin="5dp"
-	        android:ems="10"
-	        android:text="Email"
-	        android:textSize="14sp" />
+	        android:inputType="textPassword"
+	        android:background="@drawable/rectangleborder"
+	        />
 	
 	    <EditText
 	        android:id="@+id/editProEmail"
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
 	        android:ems="10"
-	        android:inputType="textEmailAddress" />
+	        android:hint="User Email"
+	        android:inputType="textEmailAddress" 
+	        android:background="@drawable/rectangleborder"
+	        />
 	
 	     <RelativeLayout
-	         android:layout_width="fill_parent"
-	         android:layout_height="wrap_content" >
-	
-	         <Button
-	             android:id="@+id/Update_btn"
-	             android:layout_width="100dp"
-	             android:layout_height="wrap_content"
-	             android:layout_centerHorizontal="true"
-	             android:text="Update" 
-	             android:onClick="updateClick"/>
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content" >
+			
+	        <Button
+	            android:id="@+id/Update_btn"
+	            android:layout_width="100dp"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="10dp"
+	            android:background="@drawable/red_box"
+	            android:layout_centerHorizontal="true"
+	            android:onClick="updateClick"
+	            android:text="Update"
+	            android:textColor="#ffffff" />
 	     </RelativeLayout>
 	</LinearLayout>
 </LinearLayout>
