--- a/cse190_listApp/res/layout/restaurantinfo.xml
+++ b/cse190_listApp/res/layout/restaurantinfo.xml
@@ -3,7 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+	<LinearLayout
+		android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical"    
+	 >
     <ImageView
         android:id="@+id/restaurantpicture"
         android:layout_width="match_parent"
@@ -13,86 +17,95 @@
         android:adjustViewBounds="true" 
        	android:layout_gravity="center"
         android:scaleType="centerCrop"
+        android:contentDescription="pictureRestaurant"
         />
+    </LinearLayout>
+    <LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical"
+	    android:layout_margin="15dp"
+	    android:layout_marginLeft = "25dp"
+	    android:layout_marginRight = "25dp"
+	    >
+		    
+	        <TextView
+		        android:id="@+id/line1"
+		        style="@android:style/TextAppearance.Medium"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:textSize="25sp"
+		        android:textStyle="bold"
+	          />
+	        
+	        <TextView
+	        	android:id="@+id/line2"
+	        	style="@android:style/TextAppearance.Medium"
+	        	android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content"
+	        	 />
+	
+	    	<TextView
+	        	android:id="@+id/line3"
+	        	style="@android:style/TextAppearance.Medium"
+	        	android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content" 
+	         />
+    	</LinearLayout>
+        <LinearLayout
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical"
+		    android:layout_margin="15dp"
+	    	android:layout_marginLeft = "25dp"
+	    	android:layout_marginRight = "25dp"
+		     >
+	    	<TextView
+		        android:id="@+id/line4"
+		        style="@android:style/TextAppearance.Medium"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+	         />
+	
+	    	<TextView
+	        android:id="@+id/line5"
+	        style="@android:style/TextAppearance.Medium"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" 
+	        />
+	
+	    	<TextView
+	        android:id="@+id/line6"
+	        style="@android:style/TextAppearance.Medium"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" />
+    </LinearLayout>
+    
+    
+    
+    
+    <LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical"
+	    android:layout_margin="15dp"
+	   	android:layout_marginLeft = "25dp"
+	    android:layout_marginRight = "25dp" 
+	   >
+    	
+        <TextView
+	        android:id="@+id/line7"
+	        style="@android:style/TextAppearance.Medium"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/line1"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="LINE1" />
+        <TextView
+	        android:id="@+id/line8"
+	        style="@android:style/TextAppearance.Medium"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"/>        
+    </LinearLayout>
+    
 
-    <TextView
-        android:id="@+id/line2"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line3"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line4"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line5"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line6"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line7"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line8"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line9"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line10"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line10"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line11"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/line12"
-        style="@android:style/TextAppearance.Medium"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
