--- a/cse190_listApp/res/layout/restaurantinfo.xml
+++ b/cse190_listApp/res/layout/restaurantinfo.xml
@@ -68,17 +68,17 @@
 	         />
 	
 	    	<TextView
-	        android:id="@+id/line5"
-	        style="@android:style/TextAppearance.Medium"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" 
+		        android:id="@+id/line5"
+		        style="@android:style/TextAppearance.Medium"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content" 
 	        />
 	
 	    	<TextView
-	        android:id="@+id/line6"
-	        style="@android:style/TextAppearance.Medium"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" />
+		        android:id="@+id/line6"
+		        style="@android:style/TextAppearance.Medium"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content" />
     </LinearLayout>
     
     
@@ -103,7 +103,10 @@
 	        android:id="@+id/line8"
 	        style="@android:style/TextAppearance.Medium"
 	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"/>        
+	        android:layout_height="wrap_content"
+	        android:clickable="true"
+	        android:textColor="#6699FF"
+	    />        
     </LinearLayout>
     
 
