--- a/cse190_listApp/res/layout/itemview.xml
+++ b/cse190_listApp/res/layout/itemview.xml
@@ -31,13 +31,14 @@
             android:textSize="12dp"
             android:textStyle="bold"
             />
+
          <TextView
-            android:id="@+id/restaurantname3"
-            android:layout_width="200dp"
-            android:textSize="8dp"
-            android:textColor="#888888"
-            android:layout_height="wrap_content"
-            android:text="RestaurantName" />
+             android:id="@+id/restaurantname3"
+             android:layout_width="200dp"
+             android:layout_height="wrap_content"
+             android:text="RestaurantName"
+             android:textColor="#888888"
+             android:textSize="9sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -56,8 +57,9 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="42dp"
                 android:isIndicator="true"
                 android:numStars="5" />
 
