--- a/cse190_listApp/res/layout/itemview.xml
+++ b/cse190_listApp/res/layout/itemview.xml
@@ -15,7 +15,7 @@
         android:fillViewport="true"
         android:maxHeight="83dp"
         android:maxWidth="250dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/pizza" />
 
     <LinearLayout
         android:layout_width="match_parent"
